Update: Total Budget Source Data in TSM List

--- a/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
+++ b/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
@@ -60,9 +60,9 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Total Budget Used" prop="total_budget" [sortable]="true">
+        <ngx-datatable-column name="Total Budget Used" prop="budget" [sortable]="true">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{row.total_budget}}
+            {{row.budget}}
           </ng-template>
         </ngx-datatable-column>
 
