--- a/src/app/pages/dte/task-sequencing/duplicate/task-sequencing-duplicate.component.html
+++ b/src/app/pages/dte/task-sequencing/duplicate/task-sequencing-duplicate.component.html
@@ -48,7 +48,7 @@
               </mat-select> -->
               <mat-select formControlName="trade_creator_id" placeholder="Pilih Group Trade Program" id="trade_creator_id" (selectionChange)="selectChange($event)" #singleSelect>
                 <ngx-mat-select-search [formControl]="filterGTP" [placeholderLabel]="'Cari Group Trade Program...'"
-                  [noEntriesFoundLabel]="'Tidak ada Group Trade Program yang ditemukan'"></ngx-mat-select-search>
+                  [noEntriesFoundLabel]="'Tidak ada Group Trade Program yang ditemukan'" [clearSearchInput]="false"></ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredGTP | async" [value]="item.id">
                   {{item.name}}
                 </mat-option>
@@ -65,7 +65,7 @@
               </mat-select> -->
               <mat-select formControlName="trade_audience_group_id" placeholder="Pilih Group Audience" id="trade_audience_group_id" (selectionChange)="selectChangeAudince($event)" #singleSelect>
                 <ngx-mat-select-search [formControl]="filterGTA" [placeholderLabel]="'Cari Group Trade Audience...'"
-                  [noEntriesFoundLabel]="'Tidak ada Group Audience yang ditemukan'"></ngx-mat-select-search>
+                  [noEntriesFoundLabel]="'Tidak ada Group Audience yang ditemukan'" [clearSearchInput]="false"></ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredGTA | async" [value]="item.id">
                   {{item.name}}
                 </mat-option>
