--- a/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
+++ b/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
@@ -37,7 +37,7 @@
         <ngx-datatable-column name="Nama" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <!-- <a class="direct-edit" (click)="directDetail(row)"> -->
-              {{row.name}}
+            {{row.name}}
             <!-- </a> -->
           </ng-template>
         </ngx-datatable-column>
@@ -94,16 +94,22 @@
               <button mat-icon-button color="" matTooltip="Duplikat" (click)="duplicate(row)">
                 <mat-icon class="secondary-text">content_copy</mat-icon>
               </button>
-              <button type="button" mat-icon-button color=""
-                matTooltip="Request File" (click)="requestFile(row)" [disabled]="reqDownloadCondition(row)['request'] === false">
-                <mat-icon *ngIf="reqDownloadCondition(row)['request'] === true" class="orange-500-fg">account_balance_wallet</mat-icon>
-                <mat-icon *ngIf="reqDownloadCondition(row)['request'] === false" class="secondary-text">account_balance_wallet</mat-icon>
+              <button type="button" mat-icon-button color="" matTooltip="Request File" (click)="requestFile(row)"
+                [disabled]="reqDownloadCondition(row)['request'] === false">
+                <mat-icon *ngIf="reqDownloadCondition(row)['request'] === true" class="orange-500-fg">
+                  account_balance_wallet</mat-icon>
+                <mat-icon *ngIf="reqDownloadCondition(row)['request'] === false" class="secondary-text">
+                  account_balance_wallet</mat-icon>
               </button>
-              <button type="button" mat-icon-button color="" matTooltip="Eksport Task Sequencing" (click)="downloadFile(row)">
-                <mat-icon *ngIf="reqDownloadCondition(row)['download'] === true" class="orange-500-fg">save_alt</mat-icon>
-                <mat-icon *ngIf="reqDownloadCondition(row)['download'] === false" class="secondary-text">save_alt</mat-icon>
+              <button type="button" mat-icon-button color="" matTooltip="Eksport Task Sequencing"
+                (click)="downloadFile(row)" [disabled]="reqDownloadCondition(row)['download'] === false">
+                <mat-icon *ngIf="reqDownloadCondition(row)['download'] === true" class="orange-500-fg">save_alt
+                </mat-icon>
+                <mat-icon *ngIf="reqDownloadCondition(row)['download'] === false" class="secondary-text">save_alt
+                </mat-icon>
               </button>
-              <button mat-icon-button *ngIf="permission?.ubah" color="" matTooltip="Edit Task Sequencing" (click)="directEdit(row)">
+              <button mat-icon-button *ngIf="permission?.ubah" color="" matTooltip="Edit Task Sequencing"
+                (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
               <button mat-icon-button color="primary" [disabled]="row.status === 'approved' || !permission?.hapus"
