--- a/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
+++ b/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
@@ -1,13 +1,13 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Ubah Task Sequence'">
+  <page-content-header [contentTitle]="(isDetail ? 'Detil' : 'Ubah') + ' Task Sequence'">
     <div class="button-row" fxLayout="row">
       <button mat-raised-button style="border: 1px solid; margin-right: 10px" (click)="export()">
         <mat-icon>arrow_upward</mat-icon>
         EXPORT COIN
       </button>
       <a #downloadLink></a>
-      <button mat-raised-button style="border: 1px solid" (click)="import()">
+      <button mat-raised-button style="border: 1px solid" (click)="import()" *ngIf="!isDetail">
         <mat-icon>arrow_downward</mat-icon>
         IMPORT COIN
       </button>
@@ -20,7 +20,7 @@
       <img fxFlex="30" [src]="'assets/images/ayo/tsm.png'" style="max-width: 30%; margin-top: 3rem">
       <div fxFlex="40">
         <div fxLayout="row" fxLayoutAlign="space-between">
-          <span class="h1"><strong>Ubah Task Sequence</strong></span>
+          <span class="h1"><strong>{{ isDetail ? 'Detil' : 'Ubah' }} Task Sequence</strong></span>
         </div>
         <form name="form" [formGroup]="taskSequenceForm" (keydown.enter)="$event.preventDefault();">
 
@@ -44,7 +44,8 @@
               </mat-error>
             </mat-form-field>-->
             <mat-form-field fxFlex="100" class="is-light">
-              <input matInput type="text" placeholder="Nama" formControlName="name" [readonly]="data?.is_editable === 0">
+              <input matInput type="text" placeholder="Nama" formControlName="name"
+                [readonly]="data?.is_editable === 0">
               <mat-error
                 *ngIf="taskSequenceForm.controls['name'].hasError('required') && taskSequenceForm.controls['name'].touched ">
                 Nama harus diisi.
@@ -55,9 +56,12 @@
               <!-- <mat-select placeholder="Pilih Trade Program" formControlName="trade_program" id="trade_program">
                 <mat-option *ngFor="let item of programs" [value]="item.id">{{item.name}}</mat-option>
               </mat-select> -->
-              <mat-select [disabled]="data?.is_editable === 0" formControlName="trade_creator_id" placeholder="Pilih Trade Program" id="trade_creator_id" (selectionChange)="selectChange($event)" #singleSelect>
+              <mat-select [disabled]="data?.is_editable === 0" formControlName="trade_creator_id"
+                placeholder="Pilih Trade Program" id="trade_creator_id" (selectionChange)="selectChange($event)"
+                #singleSelect>
                 <ngx-mat-select-search [formControl]="filterGTP" [placeholderLabel]="'Cari Trade Program...'"
-                  [noEntriesFoundLabel]="'Tidak ada Trade Program yang ditemukan'" [clearSearchInput]="false"></ngx-mat-select-search>
+                  [noEntriesFoundLabel]="'Tidak ada Trade Program yang ditemukan'" [clearSearchInput]="false">
+                </ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredGTP | async" [value]="item.id">
                   {{item.name}}
                 </mat-option>
@@ -72,9 +76,12 @@
               <!-- <mat-select placeholder="Pilih Group Audience" formControlName="group_audience" id="group_audience">
                 <mat-option *ngFor="let item of audiences" [value]="item.id">{{item.name}}</mat-option>
               </mat-select> -->
-              <mat-select [disabled]="data?.is_editable === 0" formControlName="trade_audience_group_id" placeholder="Pilih Group Audience" id="trade_audience_group_id" (selectionChange)="selectChangeAudince($event)" #singleSelect>
+              <mat-select [disabled]="data?.is_editable === 0" formControlName="trade_audience_group_id"
+                placeholder="Pilih Group Audience" id="trade_audience_group_id"
+                (selectionChange)="selectChangeAudince($event)" #singleSelect>
                 <ngx-mat-select-search [formControl]="filterGTA" [placeholderLabel]="'Cari Group Trade Audience...'"
-                  [noEntriesFoundLabel]="'Tidak ada Group Audience yang ditemukan'" [clearSearchInput]="false"></ngx-mat-select-search>
+                  [noEntriesFoundLabel]="'Tidak ada Group Audience yang ditemukan'" [clearSearchInput]="false">
+                </ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredGTA | async" [value]="item.id">
                   {{item.name}}
                 </mat-option>
@@ -88,9 +95,10 @@
             <h3 class="h3"><strong>Masa Berlaku Task Sequence</strong></h3>
 
             <mat-form-field fxFlex="100" class="is-light">
-              <input matInput (focus)="start_date.open()" [max]="maxDate" [min]="minDate"
-                [matDatepicker]="start_date" placeholder="Pilih Tanggal Mulai" formControlName="start_date" [readonly]="data?.is_editable === 0">
-              <mat-datepicker-toggle matSuffix [for]="start_date" [disabled]="data?.is_editable === 0"></mat-datepicker-toggle>
+              <input matInput (focus)="start_date.open()" [max]="maxDate" [min]="minDate" [matDatepicker]="start_date"
+                placeholder="Pilih Tanggal Mulai" formControlName="start_date" [readonly]="data?.is_editable === 0">
+              <mat-datepicker-toggle matSuffix [for]="start_date" [disabled]="data?.is_editable === 0">
+              </mat-datepicker-toggle>
               <mat-datepicker #start_date [disabled]="data?.is_editable === 0"></mat-datepicker>
               <mat-error class="mt-8 px-24"
                 *ngIf="taskSequenceForm.controls['start_date'].hasError('required') && taskSequenceForm.controls['start_date'].touched">
@@ -99,9 +107,10 @@
             </mat-form-field>
 
             <mat-form-field fxFlex="100" class="is-light">
-              <input matInput (focus)="end_date.open()" [max]="maxDate" [min]="minDate"
-                [matDatepicker]="end_date" placeholder="Pilih Tanggal Berakhir" formControlName="end_date" [readonly]="data?.is_editable === 0">
-              <mat-datepicker-toggle matSuffix [for]="end_date" [disabled]="data?.is_editable === 0"></mat-datepicker-toggle>
+              <input matInput (focus)="end_date.open()" [max]="maxDate" [min]="minDate" [matDatepicker]="end_date"
+                placeholder="Pilih Tanggal Berakhir" formControlName="end_date" [readonly]="data?.is_editable === 0">
+              <mat-datepicker-toggle matSuffix [for]="end_date" [disabled]="data?.is_editable === 0">
+              </mat-datepicker-toggle>
               <mat-datepicker #end_date [disabled]="data?.is_editable === 0"></mat-datepicker>
               <mat-error class="mt-8 px-24"
                 *ngIf="taskSequenceForm.controls['end_date'].hasError('required') && taskSequenceForm.controls['end_date'].touched">
@@ -109,8 +118,9 @@
               </mat-error>
             </mat-form-field>
             <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()"
-              [disabled]="taskSequenceForm.controls['name'].invalid || taskSequenceForm.controls['trade_creator_id'].invalid || taskSequenceForm.controls['trade_audience_group_id'].invalid || taskSequenceForm.controls['start_date'].invalid || taskSequenceForm.controls['end_date'].invalid" [routerLink]="['/dte','mission-builder','edit']">
-              SUBMIT
+              [disabled]="taskSequenceForm.controls['name'].invalid || taskSequenceForm.controls['trade_creator_id'].invalid || taskSequenceForm.controls['trade_audience_group_id'].invalid || taskSequenceForm.controls['start_date'].invalid || taskSequenceForm.controls['end_date'].invalid"
+              [routerLink]="['/dte','mission-builder',(isDetail ? 'detail' : 'edit')]">
+              {{ isDetail ? 'CEK DETIL' : 'SUBMIT' }}
             </button>
 
           </div>
