--- a/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
+++ b/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
@@ -36,9 +36,7 @@
 
         <ngx-datatable-column name="Nama" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <!-- <a class="direct-edit" (click)="directDetail(row)"> -->
-            {{row.name}}
-            <!-- </a> -->
+            <span class="row-name" (click)="directDetail(row)">{{row.name}}</span>
           </ng-template>
         </ngx-datatable-column>
 
@@ -81,6 +79,13 @@
         <ngx-datatable-column name="Created" prop="created_at">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.created_at | date:'dd/MM/yyyy HH:mm'}}
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="Last Request Data" prop="last_request">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <span *ngIf="row.last_request">{{ renderStatusRequest(row.status_export) }} : {{row.last_request |
+              date:'dd/MM/yyyy HH:mm'}}</span>
           </ng-template>
         </ngx-datatable-column>
 
