--- a/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
+++ b/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
@@ -6,7 +6,7 @@
         [routerLink]="['/task-sequencing','task-sequencing','create']">
         <mat-icon>add</mat-icon>TAMBAH
       </button> -->
-      <button style="width: 170px;" mat-raised-button aria-label="Add" type="button"
+      <button id="btn-create-task_sequencing" style="width: 170px;" mat-raised-button aria-label="Add" type="button"
         [routerLink]="['/dte','task-sequencing','create']">
         <mat-icon>add</mat-icon>TAMBAH
       </button>
@@ -43,7 +43,7 @@
         <ngx-datatable-column [width]="120" name="Status" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
-              <p class="status text-truncate h6 p-4"
+              <p [id]="'status-'+row.id" class="status text-truncate h6 p-4"
                 style="min-width: 80px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
                 [ngClass]="row.status == 'publish' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
                 {{row.status == 'publish' ? 'Aktif' : 'Tidak Aktif'}}
@@ -113,7 +113,7 @@
                 <mat-icon *ngIf="reqDownloadCondition(row)['download'] === false" class="secondary-text">save_alt
                 </mat-icon>
               </button>
-              <button mat-icon-button *ngIf="permission?.ubah" color="" matTooltip="Edit Task Sequencing"
+              <button id="btn-edit" mat-icon-button *ngIf="permission?.ubah" color="" matTooltip="Edit Task Sequencing"
                 (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
