--- a/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
+++ b/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
@@ -43,7 +43,7 @@
         <ngx-datatable-column [width]="120" name="Status" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
-              <p [id]="'status-'+row.id" class="status text-truncate h6 p-4"
+              <p id="status" class="status text-truncate h6 p-4"
                 style="min-width: 80px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
                 [ngClass]="row.status == 'publish' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
                 {{row.status == 'publish' ? 'Aktif' : 'Tidak Aktif'}}
