--- a/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
+++ b/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
@@ -2,18 +2,12 @@
   <!-- HEADER -->
   <page-content-header [contentTitle]="(isDetail ? 'Detil' : 'Ubah') + ' Task Sequence'">
     <div class="button-row" fxLayout="row">
-      <div fxLayout="column">
-        <button id="btn-export-coin" mat-raised-button style="border: 1px solid; margin-right: 10px" (click)="export()" [disabled]="!ENABLE_EXPORT_IF.includes(taskSequenceForm.get('export_coin_status').value)">
-          <mat-icon>arrow_upward</mat-icon>
-          EXPORT COIN
-        </button>
-        <label *ngIf="!ENABLE_EXPORT_IF.includes(taskSequenceForm.get('export_coin_status').value)" style="margin: 0px 0 0 15px;">Requesting File</label>
-        <a *ngIf="taskSequenceForm.get('export_coin_status').value === 'done' && taskSequenceForm.get('export_coin_result').value"
-          [href]="taskSequenceForm.get('export_coin_result').value" style="margin: 10px 0 0 15px; font-weight: bolder; color: white;">Download File</a>
-        <!-- <label style="margin: 0px 0 0 15px;">Download File</label> -->
-      </div>
+      <button mat-raised-button style="border: 1px solid; margin-right: 10px" (click)="export()">
+        <mat-icon>arrow_upward</mat-icon>
+        EXPORT COIN
+      </button>
       <a #downloadLink></a>
-      <button id="btn-import-coin" mat-raised-button style="border: 1px solid" (click)="import()" *ngIf="!isDetail">
+      <button mat-raised-button style="border: 1px solid" (click)="import()" *ngIf="!isDetail">
         <mat-icon>arrow_downward</mat-icon>
         IMPORT COIN
       </button>
