CDE-3894-migrate-to-ec2-export-import-coin-UPDATED-2: - FIX

--- a/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
+++ b/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
@@ -2,15 +2,26 @@
   <!-- HEADER -->
   <page-content-header [contentTitle]="(isDetail ? 'Detil' : 'Ubah') + ' Task Sequence'">
     <div class="button-row" fxLayout="row">
-      <button mat-raised-button style="border: 1px solid; margin-right: 10px" (click)="export()">
-        <mat-icon>arrow_upward</mat-icon>
-        EXPORT COIN
-      </button>
+      <div fxLayout="column">
+        <button id="btn-export-coin" mat-raised-button style="border: 1px solid; margin-right: 10px" (click)="export()" [disabled]="!ENABLE_EXPORT_IF.includes(taskSequenceForm.get('export_coin_status').value)">
+          <mat-icon>arrow_upward</mat-icon>
+          EXPORT COIN
+        </button>
+        <label *ngIf="!ENABLE_EXPORT_IF.includes(taskSequenceForm.get('export_coin_status').value)" style="margin: 0px 0 0 15px;">Requesting File</label>
+        <a *ngIf="taskSequenceForm.get('export_coin_status').value === 'done' && taskSequenceForm.get('export_coin_result').value"
+          [href]="taskSequenceForm.get('export_coin_result').value" style="margin: 10px 0 0 15px; font-weight: bolder; color: white;">Download File</a>
+        <!-- <label style="margin: 0px 0 0 15px;">Download File</label> -->
+      </div>
       <a #downloadLink></a>
-      <button mat-raised-button style="border: 1px solid" (click)="import()" *ngIf="!isDetail">
-        <mat-icon>arrow_downward</mat-icon>
-        IMPORT COIN
-      </button>
+      <div fxLayout="column">
+        <button id="btn-import-coin" mat-raised-button style="border: 1px solid" (click)="import()" *ngIf="!isDetail"
+        [disabled]="!ENABLE_EXPORT_IF.includes(taskSequenceForm.get('import_coin_status').value)">
+          <mat-icon>arrow_downward</mat-icon>
+          IMPORT COIN
+        </button>
+        <label
+          *ngIf="!ENABLE_EXPORT_IF.includes(taskSequenceForm.get('import_coin_status').value) && taskSequenceForm.get('import_coin_status_type').value" style="margin: 10px 0 0 15px; font-weight: bolder; color: white;">Requesting {{taskSequenceForm.get('import_coin_status_type').value.toUpperCase()}}</label>
+      </div>
     </div>
   </page-content-header>
   <!-- / HEADER -->
