--- a/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
+++ b/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
@@ -123,7 +123,7 @@
                 Tanggal berakhir harus diisi.
               </mat-error>
             </mat-form-field>
-            <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()"
+            <button id="{{isDetail ? 'btn-detail' : 'btn-edit'}}" mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()"
               [disabled]="taskSequenceForm.controls['name'].invalid || taskSequenceForm.controls['trade_creator_id'].invalid || taskSequenceForm.controls['trade_audience_group_id'].invalid || taskSequenceForm.controls['start_date'].invalid || taskSequenceForm.controls['end_date'].invalid"
               [routerLink]="['/dte','mission-builder',(isDetail ? 'detail' : 'edit')]">
               {{ isDetail ? 'CEK DETIL' : 'SUBMIT' }}
