--- a/src/app/pages/dte/task-sequencing/duplicate/task-sequencing-duplicate.component.html
+++ b/src/app/pages/dte/task-sequencing/duplicate/task-sequencing-duplicate.component.html
@@ -35,7 +35,7 @@
             </mat-form-field>-->
 
             <mat-form-field fxFlex="100" class="is-light">
-              <input matInput type="text" placeholder="Nama" formControlName="name">
+              <input id="input-nama" matInput type="text" placeholder="Nama" formControlName="name">
               <mat-error
                 *ngIf="taskSequenceForm.controls['name'].hasError('required') && taskSequenceForm.controls['name'].touched ">
                 Nama harus diisi.
@@ -46,8 +46,8 @@
               <!-- <mat-select placeholder="Pilih Trade Program" formControlName="trade_program" id="trade_program">
                 <mat-option *ngFor="let item of programs" [value]="item.id">{{item.name}}</mat-option>
               </mat-select> -->
-              <mat-select formControlName="trade_creator_id" placeholder="Pilih Trade Program" id="trade_creator_id" (selectionChange)="selectChange($event)" #singleSelect>
-                <ngx-mat-select-search [formControl]="filterGTP" [placeholderLabel]="'Cari Trade Program...'"
+              <mat-select formControlName="trade_creator_id" placeholder="Pilih Trade Program" id="trade_creator_id" (click)="selectForm('trade')" (selectionChange)="selectChange($event)" #singleSelect>
+                <ngx-mat-select-search id="select-search-trade" [formControl]="filterGTP" [placeholderLabel]="'Cari Trade Program...'"
                   [noEntriesFoundLabel]="'Tidak ada Trade Program yang ditemukan'" [clearSearchInput]="false"></ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredGTP | async" [value]="item.id">
                   {{item.name}}
@@ -63,8 +63,8 @@
               <!-- <mat-select placeholder="Pilih Group Audience" formControlName="group_audience" id="group_audience">
                 <mat-option *ngFor="let item of audiences" [value]="item.id">{{item.name}}</mat-option>
               </mat-select> -->
-              <mat-select formControlName="trade_audience_group_id" placeholder="Pilih Group Audience" id="trade_audience_group_id" (selectionChange)="selectChangeAudince($event)" #singleSelect>
-                <ngx-mat-select-search [formControl]="filterGTA" [placeholderLabel]="'Cari Group Trade Audience...'"
+              <mat-select formControlName="trade_audience_group_id" placeholder="Pilih Group Audience" id="trade_audience_group_id" (click)="selectForm('audience')" (selectionChange)="selectChangeAudince($event)" #singleSelect>
+                <ngx-mat-select-search id="select-search-audience" [formControl]="filterGTA" [placeholderLabel]="'Cari Group Trade Audience...'"
                   [noEntriesFoundLabel]="'Tidak ada Group Audience yang ditemukan'" [clearSearchInput]="false"></ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredGTA | async" [value]="item.id">
                   {{item.name}}
@@ -79,7 +79,7 @@
             <h3 class="h3"><strong>Masa Berlaku Task Sequence</strong></h3>
 
             <mat-form-field fxFlex="100" class="is-light">
-              <input matInput (focus)="start_date.open()" [max]="maxDate" [min]="minDate"
+              <input id="start-date" matInput (focus)="start_date.open()" [max]="maxDate" [min]="minDate"
                 [matDatepicker]="start_date" placeholder="Pilih Tanggal Mulai" formControlName="start_date" [readonly]="data?.is_editable === 0">
               <mat-datepicker-toggle matSuffix [for]="start_date"></mat-datepicker-toggle>
               <mat-datepicker #start_date></mat-datepicker>
@@ -90,7 +90,7 @@
             </mat-form-field>
 
             <mat-form-field fxFlex="100" class="is-light">
-              <input matInput (focus)="end_date.open()" [max]="maxDate" [min]="minDate"
+              <input id="end-date" matInput (focus)="end_date.open()" [max]="maxDate" [min]="minDate"
                 [matDatepicker]="end_date" placeholder="Pilih Tanggal Berakhir" formControlName="end_date" [readonly]="data?.is_editable === 0">
               <mat-datepicker-toggle matSuffix [for]="end_date"></mat-datepicker-toggle>
               <mat-datepicker #end_date></mat-datepicker>
@@ -99,7 +99,7 @@
                 Tanggal berakhir harus diisi.
               </mat-error>
             </mat-form-field>
-            <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()" [routerLink]="['/dte','mission-builder','duplicate']"
+            <button id="btn-submit" mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()" [routerLink]="['/dte','mission-builder','duplicate']"
               [disabled]="taskSequenceForm.controls['name'].invalid || taskSequenceForm.controls['trade_creator_id'].invalid || taskSequenceForm.controls['trade_audience_group_id'].invalid || taskSequenceForm.controls['start_date'].invalid || taskSequenceForm.controls['end_date'].invalid" [routerLink]="['/dte','mission-builder','edit']">
               SUBMIT
             </button>
