--- a/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
+++ b/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
@@ -68,9 +68,9 @@
                 <mat-option *ngFor="let item of programs" [value]="item.id">{{item.name}}</mat-option>
               </mat-select> -->
               <mat-select [disabled]="data?.is_editable === 0" formControlName="trade_creator_id"
-                placeholder="Pilih Trade Program" id="trade_creator_id" (selectionChange)="selectChange($event)"
+                placeholder="Pilih Trade Program" id="tradeCreatorId" (click)="selectForm('trade')" (selectionChange)="selectChange($event)"
                 #singleSelect>
-                <ngx-mat-select-search [formControl]="filterGTP" [placeholderLabel]="'Cari Trade Program...'"
+                <ngx-mat-select-search id="select-search-trade" [formControl]="filterGTP" [placeholderLabel]="'Cari Trade Program...'"
                   [noEntriesFoundLabel]="'Tidak ada Trade Program yang ditemukan'" [clearSearchInput]="false">
                 </ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredGTP | async" [value]="item.id">
@@ -87,10 +87,8 @@
               <!-- <mat-select placeholder="Pilih Group Audience" formControlName="group_audience" id="group_audience">
                 <mat-option *ngFor="let item of audiences" [value]="item.id">{{item.name}}</mat-option>
               </mat-select> -->
-              <mat-select [disabled]="data?.is_editable === 0" formControlName="trade_audience_group_id"
-                placeholder="Pilih Group Audience" id="trade_audience_group_id"
-                (selectionChange)="selectChangeAudince($event)" #singleSelect>
-                <ngx-mat-select-search [formControl]="filterGTA" [placeholderLabel]="'Cari Group Trade Audience...'"
+              <mat-select [disabled]="data?.is_editable === 0"  formControlName="trade_audience_group_id" placeholder="Pilih Group Audience" id="tradeAudienceGroupId" (click)="selectForm('audience')" (selectionChange)="selectChangeAudince($event)" #singleSelect>
+                <ngx-mat-select-search id="select-search-audience" [formControl]="filterGTA" [placeholderLabel]="'Cari Group Trade Audience...'"
                   [noEntriesFoundLabel]="'Tidak ada Group Audience yang ditemukan'" [clearSearchInput]="false">
                 </ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredGTA | async" [value]="item.id">
