--- a/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
+++ b/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
@@ -8,8 +8,7 @@
           EXPORT COIN
         </button>
         <label *ngIf="!ENABLE_EXPORT_IF.includes(taskSequenceForm.get('export_coin_status').value)" style="margin: 0px 0 0 15px;">Requesting File</label>
-        <a *ngIf="taskSequenceForm.get('export_coin_status').value === 'done' && taskSequenceForm.get('export_coin_result').value"
-          [href]="taskSequenceForm.get('export_coin_result').value" style="margin: 10px 0 0 15px; font-weight: bolder; color: white;">Download File</a>
+        <a id="btnDownloadFile" *ngIf="taskSequenceForm.get('export_coin_status').value === 'done' && taskSequenceForm.get('export_coin_result').value" [href]="taskSequenceForm.get('export_coin_result').value" style="margin: 10px 0 0 15px; font-weight: bolder; color: white;">Download File</a>
         <!-- <label style="margin: 0px 0 0 15px;">Download File</label> -->
       </div>
       <a #downloadLink></a>
